--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql://postgres:root@localhost:5432/tournament_db
+DATABASE_URL=postgresql://postgres:root@localhost:5432/app
+SECRET_KEY=dev-key-123
+JWT_SECRET_KEY=jwt-secret-key-123
