--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,10 @@ log/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+# OS
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
